--- a/index.html
+++ b/index.html
@@ -1576,11 +1576,13 @@ function exportToCSV() {
             setTimeout(() => toast.classList.remove('show'), 3000);
         }
     </script>
-	// Registrar Service Worker
-	if ('serviceWorker' in navigator) {
-	  navigator.serviceWorker.register('sw.js')
-	    .then(reg => console.log('Service Worker registrado'))
-	    .catch(err => console.log('Error:', err));
-	}
+	<script>
+		// Registrar Service Worker
+		if ('serviceWorker' in navigator) {
+  			   	 navigator.serviceWorker.register('sw.js')
+   					 .then(reg => console.log('Service Worker registrado'))
+ 				        .catch(err => console.log('Error:', err));
+		}
+	</script>
 </body>
 </html>
